--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "types": ["node"]
+
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
